refactor into single class
not sure if this is the right way to do it but whatever

--- a/src/main.scss
+++ b/src/main.scss
@@ -4,18 +4,18 @@ body {
   padding: 0;
 }
 
-html, body, .page-container {
+html, body, .container {
   height: 100%;
   width: 100%;
 }
 
-.page-container {
+.container {
   align-items: center;
   display: flex;
   justify-content: center;
 }
 
-.pagination {
+.overlay {
   left: 0;
   position: absolute;
   top: 0;
