--- a/src/main.scss
+++ b/src/main.scss
@@ -15,6 +15,10 @@ html, body, .container {
   justify-content: center;
 }
 
+.canvas-container {
+  position: absolute !important;
+}
+
 .overlay {
   left: 0;
   position: absolute;
