--- a/src/main.scss
+++ b/src/main.scss
@@ -94,8 +94,8 @@ button {
 
 .pagination {
   background: #edeff0;
-  border-radius: 0.25em;
-  padding: 0.25em;
+  border-radius: 0 0.25em 0.25em 0;
+  padding: 0.25em 0.25em 0.25em 0;
 
   form {
     display: inline;
@@ -116,11 +116,14 @@ button {
     text-align: right;
   }
 
+  &.visibility-2 {
+    left: -0.25em;
+    position: relative;
+  }
+
   &.visibility-1 {
-    border-radius: 0 0.25em 0.25em 0;
     box-sizing: border-box;
     height: 1.8em;
-    padding-left: 0;
 
     button {
       display: none;
@@ -134,13 +137,13 @@ button {
 
 .toolbar {
   background: #edeff0;
-  border-radius: 0.25em;
+  border-radius: 0.25em 0 0.25em 0.25em;
   display: flex;
   flex-direction: column;
   padding: 0.25em;
 
   &.visibility-1 {
-    border-radius: 0.25em 0 0 0.25em;
+    border-bottom-right-radius: 0;
     box-sizing: border-box;
     height: 1.8em;
     padding: 0.1em;
