--- a/src/main.scss
+++ b/src/main.scss
@@ -60,9 +60,12 @@ button {
     background-color: #aaaaaa99;
   }
 
-  &.disabled, &:disabled:hover {
-    background-color: transparent;
+  &.disabled {
     color: #26262699;
+  }
+
+  &.inactive, &:disabled:hover {
+    background-color: transparent;
     cursor: unset;
   }
 
@@ -92,9 +95,12 @@ button {
   }
 }
 
-.pagination {
+.overlay > div {
   background: #edeff0;
-  border-radius: 0 0.25em 0.25em 0;
+  padding: 0.25em;
+}
+
+.pagination {
   padding: 0.25em 0.25em 0.25em 0;
 
   form {
@@ -136,11 +142,8 @@ button {
 }
 
 .toolbar {
-  background: #edeff0;
-  border-radius: 0.25em 0 0.25em 0.25em;
   display: flex;
   flex-direction: column;
-  padding: 0.25em;
 
   &.visibility-1 {
     border-bottom-right-radius: 0;
@@ -155,5 +158,27 @@ button {
     button.active {
       background-color: transparent;
     }
+  }
+}
+
+.stylebar {
+  display: flex;
+  flex-direction: column;
+
+  .style {
+    position: relative;
+  }
+
+  .substyle {
+    background: #edeff0;
+    display: none;
+    left: 1.5em;
+    padding: 0.25em 0.25em 0.25em 0;
+    position: absolute;
+    top: -0.25em;
+  }
+  
+  .style:hover .substyle {
+    display: flex;
   }
 }
