--- a/src/main.scss
+++ b/src/main.scss
@@ -64,7 +64,7 @@ button {
     color: #26262699;
   }
 
-  &.inactive, &:disabled:hover {
+  &.inactive, &.disabled:hover {
     background-color: transparent;
     cursor: unset;
   }
@@ -75,9 +75,6 @@ button {
 }
 
 .overlay {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: row;
   left: 0;
   opacity: 0.5;
   position: absolute;
@@ -90,6 +87,16 @@ button {
     transition: opacity 0.2s;
   }
 
+  &.visibility-2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  &.visibility-1 {
+    display: flex;
+    flex-direction: row;
+  }
+
   &.visibility-0 {
     display: none;
   }
@@ -100,18 +107,16 @@ button {
   padding: 0.25em;
 }
 
-.pagination {
-  padding: 0.25em 0.25em 0.25em 0;
-
+.overlay .pagination {
   form {
     display: inline;
   }
 
   input {
+    -moz-appearance: none;
+    -webkit-appearance: none;
     background: #f0f0f0;
     border: none;
-    border-bottom: 2px solid #f0f0f0;
-    border-radius: 0;
     box-sizing: border-box;
     font: inherit;
     height: 1em;
@@ -123,13 +128,13 @@ button {
   }
 
   &.visibility-2 {
-    left: -0.25em;
-    position: relative;
+    grid-column: 1 / 3;
   }
 
   &.visibility-1 {
     box-sizing: border-box;
     height: 1.8em;
+    padding: 0.25em 0;
 
     button {
       display: none;
@@ -141,15 +146,23 @@ button {
   }
 }
 
-.toolbar {
+.overlay .toolbar {
   display: flex;
   flex-direction: column;
+  padding: 0 0 0.25em 0.25em;
+
+  button {
+    width: 100%;
+  }
 
   &.visibility-1 {
     border-bottom-right-radius: 0;
     box-sizing: border-box;
     height: 1.8em;
+    order: -1;
     padding: 0.1em;
+    width: 1.8em;
+    text-align: center;
 
     button:not(.active) {
       display: none;
@@ -157,13 +170,19 @@ button {
 
     button.active {
       background-color: transparent;
+      cursor: unset;
     }
   }
 }
 
-.stylebar {
+.overlay .stylebar {
   display: flex;
   flex-direction: column;
+  padding: 0 0.25em 0.25em 0;
+
+  button {
+    width: 100%;
+  }
 
   .style {
     position: relative;
@@ -172,7 +191,7 @@ button {
   .substyle {
     background: #edeff0;
     display: none;
-    left: 1.5em;
+    left: calc(50% + 0.8em);
     padding: 0.25em 0.25em 0.25em 0;
     position: absolute;
     top: -0.25em;
@@ -180,5 +199,37 @@ button {
   
   .style:hover .substyle {
     display: flex;
+  }
+
+  &.visibility-1 {
+    display: flex;
+    flex-direction: row;
+    padding: 0.1em 0.15em 0.1em 0;
+
+    button {
+      padding: 0.15em 0.2em 0.4em;
+    }
+
+    & > button, .style:hover .substyle {
+      display: none;
+    }
+  }
+}
+
+.overlay .undoredo {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0.25em;
+
+  button {
+    width: 100%;
+  }
+
+  &.visibility-2 {
+    grid-column: 1 / 3;
+  }
+
+  &.visibility-1 {
+    display: none;
   }
 }
