--- a/src/main.scss
+++ b/src/main.scss
@@ -273,9 +273,72 @@ button {
 .modal-overlay {
   background: #edeff0;
   bottom: calc(max(50%, 14.5em) - 12.5em);
-  left: calc(max(50%, 22em) - 20em);
+  left: calc(max(50%, 19em) - 17em);
   overflow-y: auto;
   position: fixed;
-  right: calc(max(50%, 22em) - 20em);
+  right: calc(max(50%, 19em) - 17em);
   top: calc(max(50%, 14.5em) - 12.5em);
+}
+
+.bindings {
+  margin-bottom: 0.5em;
+
+  .row {
+    display: flex;
+  }
+
+  .key {
+    border: 2px solid #bbb;
+    border-radius: 0.3em;
+    height: 4em;
+    margin: 0.25em;
+    position: relative;
+    width: 4em;
+
+    .letter {
+      color: #555;
+      font-size: 0.9em;
+      left: 0.25em;
+      position: absolute;
+      text-transform: capitalize;
+      top: 0.25em;
+    }
+
+    .action {
+      bottom: 0.25em;
+      font-size: 0.9em;
+      font-weight: bold;
+      position: absolute;
+      right: 0.25em;
+      text-align: right;
+      text-transform: capitalize;
+      width: 3.9em;
+    }
+
+    i {
+      display: block;
+      font-size: 1.1em;
+      margin-bottom: 0.1em;
+    }
+
+    // dotted and dashed icons
+    svg {
+      bottom: 1.35em;
+      position: absolute;
+      right: 0;
+    }
+
+    // halffill icon
+    .action > div {
+      position: absolute !important;
+      right: 0 !important;
+      bottom: 1.7em !important;
+    }
+
+    .unassigned {
+      color: #555;
+      font-weight: normal;
+      text-transform: none;
+    }
+  }
 }
