--- a/src/main.scss
+++ b/src/main.scss
@@ -299,10 +299,13 @@ button {
   }
 
   .key {
+    background: transparent;
     border: 2px solid #bbb;
     border-radius: 0.3em;
+    box-sizing: content-box;
     height: 4em;
     margin: 0.25em;
+    padding: 0;
     position: relative;
     width: 4em;
 
