--- a/src/main.scss
+++ b/src/main.scss
@@ -270,6 +270,14 @@ button {
   }
 }
 
+.help-modal {
+  .close {
+    padding: 0.125em 0.4em 0;
+    position: absolute;
+    right: -0.75em;
+  }
+}
+
 .modal-overlay {
   bottom: calc(max(50%, var(--height) / 2) - var(--height) / 2 + 2em);
   left: calc(max(50%, var(--width) / 2) - var(--width) / 2 + 2em);
