restyle context menu

--- a/src/main.scss
+++ b/src/main.scss
@@ -60,12 +60,15 @@ button {
     background-color: #aaaaaa99;
   }
 
+  &.inactive, &.disabled:hover {
+    background-color: transparent;
+  }
+
   &.disabled {
     color: #26262699;
   }
 
-  &.inactive, &.disabled:hover {
-    background-color: transparent;
+  &.active, &.inactive, &.disabled:hover {
     cursor: unset;
   }
 
@@ -437,10 +440,9 @@ button {
 }
 
 .context-menu {
-  align-items: center;
+  background-color: #edeff0;
   border-radius: 0.25em;
-  display: flex;
-  flex-direction: column;
+  padding: 0.25em;
   position: absolute;
 
   .substyle {
@@ -448,7 +450,22 @@ button {
     flex-direction: row;
   }
 
+  button {
+    opacity: 0.5;
+    margin: 0.1em;
+  }
+
+  button.active {
+    background: none;
+    border-radius: 0;
+    border-bottom: 1px solid #262626;
+  }
+
+  button.active, button:hover {
+    opacity: 1;
+  }
+
   .__react_component_tooltip {
-    opacity: 0;
+    display: none;
   }
 }
