Add drag and drop for images.

--- a/src/main.scss
+++ b/src/main.scss
@@ -439,6 +439,10 @@ button {
   }
 }
 
+.file-drop-active {
+  background: #00c3ff;
+}
+
 .context-menu {
   background-color: #edeff0;
   border-radius: 0.25em;
