--- a/src/styles/_overlay.scss
+++ b/src/styles/_overlay.scss
@@ -31,112 +31,7 @@
   padding: 0.25em;
 }
 
-.overlay .pagination {
-  form {
-    display: inline;
-  }
-
-  input {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    background: #f0f0f0;
-    border: none;
-    box-sizing: border-box;
-    font: inherit;
-    height: 1em;
-    margin: 0;
-    padding: 0;
-    vertical-align: baseline;
-    width: 0.6em;
-    text-align: right;
-  }
-
-  &.visibility-2 {
-    grid-column: 1 / 3;
-  }
-
-  &.visibility-1 {
-    box-sizing: border-box;
-    height: 1.8em;
-    padding: 0.25em 0;
-
-    button {
-      display: none;
-    }
-
-    .total-pages {
-      margin-right: 0.25em;
-    }
-  }
-}
-
-.overlay .toolbar {
-  display: flex;
-  flex-direction: column;
-  padding: 0 0 0.25em 0.25em;
-
-  button {
-    width: 100%;
-  }
-
-  &.visibility-1 {
-    border-bottom-right-radius: 0;
-    box-sizing: border-box;
-    height: 1.8em;
-    order: -1;
-    padding: 0.1em;
-    width: 1.8em;
-    text-align: center;
-
-    button:not(.active) {
-      display: none;
-    }
-
-    button.active {
-      background-color: transparent;
-      cursor: unset;
-    }
-  }
-}
-
-.overlay .stylebar {
-  display: flex;
-  flex-direction: column;
-  padding: 0 0.25em 0.25em 0;
-
-  button {
-    width: 100%;
-  }
-
-  &.visibility-1 {
-    display: flex;
-    flex-direction: row;
-    padding: 0.1em 0.15em 0.1em 0;
-
-    button {
-      padding: 0.15em 0.2em 0.4em;
-    }
-
-    & > button, .button-row:hover .button-row-inner {
-      display: none;
-    }
-  }
-}
-
-.overlay .undoredo {
-  display: flex;
-  justify-content: space-between;
-  padding: 0 0.25em;
-
-  button {
-    width: 100%;
-  }
-
-  &.visibility-2 {
-    grid-column: 1 / 3;
-  }
-
-  &.visibility-1 {
-    display: none;
-  }
-}
+@import "pagination";
+@import "undoredo";
+@import "toolbar";
+@import "stylebar";
