refactor droparea control
most important reason is that we avoid touching the dom as much as possible and leave it to react; yes its more complicated but sigh

--- a/src/styles/_overlay.scss
+++ b/src/styles/_overlay.scss
@@ -31,6 +31,19 @@
   padding: 0.25em;
 }
 
+.drop-area {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+
+  &.active {
+    background: #526e88;
+  }
+}
+
 @import "pagination";
 @import "undoredo";
 @import "toolbar";
