change style of hover and .active

--- a/src/styles/_modals.scss
+++ b/src/styles/_modals.scss
@@ -29,9 +29,12 @@
     margin: 0 0.25em;
     width: initial;
 
-    &:hover,
     &.active {
-      background: #bbb;
+      background: #c4c4c4;
+    }
+
+    &:hover {
+      background: #b0b0b0;
     }
   }
 
