testing keyboard style tweaks

--- a/src/styles/_bindings.scss
+++ b/src/styles/_bindings.scss
@@ -48,21 +48,21 @@
 
   .key {
     background-color: transparent;
-    border: 2px solid #bbb;
+    border: 2px solid #ccc;
     border-radius: 0.3em;
     box-sizing: content-box;
-    height: 4em;
+    height: 4.25rem;
     margin: 0.25em;
     padding: 0;
     position: relative;
-    width: 4em;
+    width: 4.25rem;
 
     &.held {
       background-color: #aaa8;
     }
 
     .letter {
-      color: #555;
+      color: #777;
       font-size: 0.9em;
       left: 0.25em;
       position: absolute;
@@ -71,13 +71,13 @@
     }
 
     .action {
-      bottom: 0.25em;
+      bottom: 0.1rem;
+      color: #444;
       font-size: 0.9em;
-      font-weight: bold;
       position: absolute;
-      right: 0.3em;
+      right: 0.3rem;
       text-align: right;
-      width: 3.9em;
+      width: 4rem;
     }
 
     i {
@@ -108,7 +108,7 @@
     }
 
     .unassigned {
-      color: #555;
+      color: #777;
       font-weight: normal;
     }
   }
