--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,6 +1,5 @@
 button {
-  -moz-appearance: none;
-  -webkit-appearance: none;
+  appearance: none;
   background-color: transparent;
   border: none;
   border-radius: 0.25em;
