--- a/src/styles/_pagination.scss
+++ b/src/styles/_pagination.scss
@@ -4,8 +4,7 @@
   }
 
   input {
-    -moz-appearance: none;
-    -webkit-appearance: none;
+    appearance: none;
     background: #f0f0f0;
     border: none;
     box-sizing: border-box;
